@startuml

Book o-- BookAuthor
Book o-- BookCategory
Author <-- BookAuthor
Category <-- BookCategory
Book <-- BookRating

class Book {
-id : Long
-isbn : String
-title : String
-publicationDate : LocalDate
-authors : List<BookAuthor>
-categories : Set<BookCategory>
}

class BookAuthor {
-author : Long
}

class BookCategory {
-category : Long
}

class Author {
-id : Long
-fullName : String
}

class Category {
-id : Long
-name : String
}

class BookRating {
-id : Long
-version : int
-book : Long
-rating : BigDecimal
-numberOfRatings : int
}

@enduml